objects/Flow_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Flow_API_Name__c</fullName>
        <label>Flow API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input__c</fullName>
        <description>Input mapping. {&quot;flowInputVariableName&quot;:&quot;source.path.to.value&quot;}</description>
        <label>Input</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Output__c</fullName>
        <description>Output variables comma separated &quot;outputVar1,outputVar2&quot;</description>
        <label>Output</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;REST&quot;</defaultValue>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REST</fullName>
                    <default>true</default>
                    <label>REST</label>
                </value>
                <value>
                    <fullName>Data Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Flow Setting</label>
    <pluralLabel>Flow Settings</pluralLabel>
</CustomObject>